--- a/views/template/index.tpl.html
+++ b/views/template/index.tpl.html
@@ -5,10 +5,10 @@
     <title>React Express Server</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="/favicon.ico"></head>
+</head>
 <body>
 <div id="main"><%- root %></div>
 <script>
 </script>
-<script type="text/javascript" src="/common.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
+</body>
 </html>
