add react-redux from server

--- a/views/template/index.tpl.ejs
+++ b/views/template/index.tpl.ejs
@@ -9,6 +9,7 @@
 <body>
 <div id="main"><%- root %></div>
 <script>
+    window.REDUX_STATE = <%- JSON.stringify(state) %>
 </script>
 </body>
 </html>
