--- a/views/dev/index.ejs
+++ b/views/dev/index.ejs
@@ -9,6 +9,7 @@
 <body>
 <div id="main"><%- root %></div>
 <script>
+    window.REDUX_STATE = <%- JSON.stringify(state) %>
 </script>
 <script type="text/javascript" src="/common.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
 </html>
